Fixed spacing

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,35 @@
+/* PROGRESS BAR CSS */
+
+body {
+	font-family:'Helvetica';
+	background-color:#e1e0e0;
+}
+
+h1 small {color:white; font-size:30px;}
+p.lead {margin-bottom: 5px; margin-top: 15px}
+
+.dashboard-container {background-color:#fff; padding:20px; border-radius:5px;}
+
+/* CSS for Custom Table */
+
+.custab{
+	border: 1px solid #ccc;
+	padding: 5px;
+	margin: 5% 0;
+	box-shadow: 3px 3px 2px #ccc;
+	transition: 0.5s;
+}
+.custab:hover{
+	box-shadow: 3px 3px 0px transparent;
+	transition: 0.5s;
+}
+
+.table-description {max-width:170px;}
+.alert{ display: none; }
+
+.table tbody tr th, .table tbody tr td {padding:5px;}
+table.custab { margin: 0% 0; }
+
 .progress {
 	position: relative;
 	height: 25px;
@@ -18,28 +50,5 @@
 	padding: 3px 10px 2px;
 	color:#333;
 }
-body {
-	font-family:'Helvetica';
-	background-color:#e1e0e0;
-}
 
-h1 small {color:white; font-size:30px;}
-.panel {height:190px;}
-.table-height {height: 280px; overflow-y: scroll;}
-.dashboard-container {background-color:#fff; padding:20px; border-radius:5px;}
-
-/* CSS for Custom Table */
-
-.custab{
-	border: 1px solid #ccc;
-	padding: 5px;
-	margin: 5% 0;
-	box-shadow: 3px 3px 2px #ccc;
-	transition: 0.5s;
-}
-.custab:hover{
-	box-shadow: 3px 3px 0px transparent;
-	transition: 0.5s;
-}
-
-.period-selector {margin-right:15px;}
+/* PROGRESS BAR CSS ENDS */
